<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/editText"
        android:layout_width="224dp"
        android:layout_height="0dp"
        android:layout_marginBottom="115dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_anio"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnProgreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_Calcular"
        android:layout_width="170dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10pt"
        android:text="@string/btn_Calcular"
        android:textColor="@color/colorWhite"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnProgreso"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnProgreso"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10pt"
        android:text="@string/progres_dialog"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/btnLista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/btnLista"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginBottom="127dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10pt"
        android:text="@string/list_alert"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProgreso" />

    <Button
        android:id="@+id/btnAnko"
        android:layout_width="170dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10pt"
        android:text="@string/simple_alert"
        android:textColor="@color/colorWhite"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnLista"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>